internal/config/testdata/invalid-config/AppAPICredentials.hjson
{
  APIAppCredentials:
  {
    ClientID: ""
    ClientSecret: ""
  }
  Account: youremail@domain.com
  SecretsBackendType: auto
  Jobs:
  [
    {
      SourceFolder: ./testdata
      CreateAlbums: folderName
      DeleteAfterUpload: false
      IncludePatterns: []
      ExcludePatterns: []
    }
  ]
}